<resources>

    <string name="app_name">HSRlunch</string>
    <string name="title_activity_main">HSRlunch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="kontoStand">Badge-Kontostand:</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_translate">Übersetzen</string>
    <string name="pref_fav_menu">Bevorzugtes Menu</string>
    <string name="pref_badge">Badge-Konto</string>
    <string name="pref_badge_long">HSR Badge-Konto aktivieren</string>
    <string name="pref_menu_default">Tagesteller</string>
    <string name="notAvailable">Es sind leider keine Informationen vorhanden</string>
    <string name="on">Badge Info aktiviert</string>
    <string name="off">Badge Info deaktiviert</string>
    <string name="tagesauswahl">Tagesauswahl</string>
    <string name="pref_badge_username">Benutzername</string>
    <string name="pref_badge_username_long">Bitte hier den HSR-Usernamen eingeben ohne führendes HSR\\</string>
    <string name="pref_badge_password">Passwort</string>
    <string name="pref_badge_password_long">Bitte hier das Passwort des HSR-Accounts eingeben</string>
    <string name="err_no_internet">Keine Internet Verbindung vorhanden</string>
    <string name="err_no_hsrwifi">Nicht mit HSR-Secure verbunden</string>
    <string name="err_badge_not_parseable">Badge-Kontostand konnte nicht abgerufen werden</string>
    <string name="err_update_failed">Update konnte nicht durchgeführt werden</string>
    <string name="err_translate_failed">Kein Google Translate vorhanden</string>
    <string name="weekendText">Am Wochenende stehen keine aktuellen Informationen bereit</string>
    <string name="share_intent_text">HSR SV-Menu am: </string>
    <string name="menu_credits">Über</string>
    <string name="title_activity_credits">Credits</string>
    <string name="version">Version</string>
    <string name="copyright">©Reto Schelbert, Susanne Mathys, Christof Büchi</string>
    <string name="project">HSR Challenge Projekt</string>
    <string name="appRating"><u>Applikation bewerten</u></string>
    <string name="librarytitel">Verwendete Libraries:</string>

</resources>