<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="@string/pref_menu_default"
        android:entries="@array/menu_title_entries"
        android:entryValues="@array/menu_title_entries"
        android:key="pref_fav_menu"
        android:title="@string/pref_fav_menu" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_badge"
        android:summary="@string/pref_badge_long"
        android:title="@string/pref_badge" />

    <EditTextPreference
        android:dependency="pref_badge"
        android:key="pref_badge_username"
        android:summary="@string/pref_badge_username_long"
        android:title="@string/pref_badge_username" />
    <ch.hsr.hsrlunch.ui.CheapEditTextPreference
        android:dependency="pref_badge"
        android:inputType="textPassword"
        android:key="pref_badge_password"
        android:summary="@string/pref_badge_password_long"
        android:title="@string/pref_badge_password" />

</PreferenceScreen>