<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_fav_menu"
        android:title="@string/pref_fav_menu"
        android:entries="@array/menu_title_entries"
        android:entryValues="@array/menu_title_entries"
        android:defaultValue="@string/pref_menu_default" />  
        <CheckBoxPreference  
             android:key="pref_badge"
             android:defaultValue="false"
             android:summaryOff="@string/off"
             android:summaryOn="@string/on"
            />
          <EditTextPreference android:key="pref_username" android:dependency="pref_badge" android:title='@string/pref_badge_username' android:summary="@string/pref_badge_username_long"/>
       <EditTextPreference android:key="pref_password" android:dependency="pref_badge" android:title='@string/pref_badge_password' android:summary="@string/pref_badge_password_long" android:inputType="textPassword" />       
 
</PreferenceScreen>

